Revert "fix several accessibility forms bug and remove 'visibile/hide' RWD helper classes"
This reverts commit faa4a096b399900ad1b7b4018e518f5cdb9050ac.

--- a/bullframe.css
+++ b/bullframe.css
@@ -156,18 +156,11 @@ pre {
 p {
   font-size: 1em;
 }
-pre code {
-  white-space: pre;
-  white-space: pre-wrap;
-}
 pre {
-  word-break: break-all; /* webkit */
+  word-break: break-all;
   word-wrap: break-word;
   white-space: pre;
   white-space: pre-wrap;
-}
-code {
-  white-space: nowrap;
 }
 pre, 
 code, 
@@ -429,22 +422,6 @@ input[type="tel"],
 input[type="file"], 
 input[type="search"],
 input[type="text"], 
-input[type="range"], 
-input[type="time"], 
-input[type="url"], 
-select, 
-textarea {
-  display: block;
-}
-input[type="color"], 
-input[type="email"], 
-input[type="file"],
-input[type="number"], 
-input[type="password"], 
-input[type="tel"], 
-input[type="file"], 
-input[type="search"],
-input[type="text"], 
 input[type="date"], 
 input[type="range"], 
 input[type="datetime"], 
@@ -452,9 +429,11 @@ input[type="datetime-local"],
 input[type="month"], 
 input[type="time"], 
 input[type="week"], 
+input[type="time"], 
 input[type="url"], 
 select, 
 textarea {
+  display: block;
   width: 100%;
   *width: 97%; /* IE7 doesn't support CSS3 'box-sizing' */
   max-width: 100%;
@@ -488,7 +467,7 @@ input[type="time"],
 input[type="week"], 
 input[type="time"], 
 input[type="url"],
-/* select, */ /* avoid arrow disappearing in android browser v4.1.2 */
+select, 
 textarea {
   border: 1px solid #999;
   -webkit-border-radius: 0;
@@ -571,6 +550,27 @@ input::-moz-focus-inner {
   border: 0;
   padding: 0;
 } 
+button:focus, 
+input:focus, 
+input[type="file"]:focus, 
+input[type="radio"]:focus, 
+input[type="checkbox"]:focus,
+input[type="file"]:active, 
+input[type="radio"]:active, 
+input[type="checkbox"]:active,
+select:focus, 
+textarea:focus,
+:invalid  {
+  -webkit-box-shadow: none;
+     -moz-box-shadow: none;
+          box-shadow: none;
+} 
+button:focus, 
+input:focus, 
+select:focus, 
+textarea:focus {
+  z-index: 1;
+}
 select {
   text-transform: none;
 }
@@ -985,6 +985,46 @@ a img.aligncenter {
   position: static;
   width: auto;
 }
+.visible-phone { 
+  display: none !important;
+}
+.visible-tablet {
+  display: none !important;
+}
+.hidden-desktop {
+  display: none !important;
+}
+.visible-desktop {
+  display: inherit !important;
+}
+@media (min-width: 601px) and (max-width: 979px) {
+  .hidden-desktop {
+    display: inherit !important;
+  }
+  .visible-desktop {
+    display: none !important ;
+  }
+  .visible-tablet {
+    display: inherit !important;
+  }
+  .hidden-tablet {
+    display: none !important;
+  }
+}
+@media (max-width: 600px) {
+  .hidden-desktop {
+    display: inherit !important;
+  }
+  .visible-desktop {
+    display: none !important;
+  }
+  .visible-phone {
+    display: inherit !important;
+  }
+  .hidden-phone {
+    display: none !important;
+  }
+}
 
 /* layout positioning ---------------- */
 .pull-right {
@@ -1391,8 +1431,8 @@ input[type="time"],
 input[type="week"], 
 input[type="time"], 
 input[type="url"],
-select, */ /* double-check android browser appearance */
-/* textarea {
+select, 
+textarea {
   border-color: ;
 }
 button,
